@@ -97,7 +97,7 @@ extern void change_font(int, const char *);
 extern const char *get_font_name(void *);
 extern void set_shadow_color_by_name(unsigned char, const char *);
 extern void set_shadow_color_by_pixel(unsigned char, Pixel);
-extern unsigned char parse_font_fx(const char *line);
+extern unsigned char parse_font_fx(char *line);
 
 _XFUNCPROTOEND
 
